[gd_scene load_steps=6 format=3 uid="uid://d2w46ta7hdhs5"]

[ext_resource type="Script" path="res://Script/Interactables/boss_door.gd" id="1_5otje"]
[ext_resource type="Texture2D" uid="uid://ctgbwwtry0eh1" path="res://Sprites/Interactables/door_closed.png" id="1_tg6ci"]
[ext_resource type="Texture2D" uid="uid://cy4b8kpww2vnb" path="res://Sprites/Interactables/door_open.png" id="2_6cuiy"]
[ext_resource type="PackedScene" uid="uid://jiiccybsu5tm" path="res://Scenes/Interactables/interact_area.tscn" id="3_234fa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tyd35"]
size = Vector2(18, 62)

[node name="BossDoor" type="Node2D"]
z_index = -1
script = ExtResource("1_5otje")

[node name="door_closed" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("1_tg6ci")
centered = false

[node name="door_open" type="Sprite2D" parent="."]
visible = false
position = Vector2(24, 35)
scale = Vector2(2, 2)
texture = ExtResource("2_6cuiy")

[node name="InteractArea" parent="." instance=ExtResource("3_234fa")]
position = Vector2(-8, 48)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(18, 33)
shape = SubResource("RectangleShape2D_tyd35")
